# dvcartifacts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test_cli.yml
dvcartifacts/: cli.py  requirements.txt
src/dvcartifacts/: dvcartifacts.py  requirements.txt  setup.py
